--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="https://jperm.net/3x3/cfop">CFOP</a>
+    <a href="https://jperm.net/3x3/cfop">CFOP changed</a>
   </body>
 </html>
